--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
-Wunderlust Travel 
-(logo.png)
-Let Wunderlust Travel help you plan the trip of your dreams!
-
-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-Destinations
-Inspirations
-Special
-Contact Us
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wunderlust Travel</title>
+</head>
+<header>
+  <h1>Wunderlust Travel</h1> 
+    <img src="/images/logo-S.png">
+    <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
+  <h2>Main Navigation</h2>
+    <nav>
+      <ul>
+        <li>Destinations</li>
+        <li>Inspirations</li>
+        <li>Special</li>
+        <li>Contact Us</li>
+    </ul>
+    </nav>
+</header>
+<body>
 Majorca
 Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.
 
@@ -154,7 +167,9 @@ Destination (Barcelona, Granada, Ibiza, Madrid, Majorca, Seville, Tenerife, Vale
 Travel Time (Fall, Winter, Spring, Summer, Flexible)
 
 
-
+</body>
+<footer>
 Copyright 2021 Wunderlust
 Privacy Statement
 Terms of Service
+</footer>
