--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <header>
   <h1>Wunderlust Travel</h1> 
-    <img src="/images/logo-S.png">
+  <picture>
+    <source media="(min-width: 1264px)" srcset="/images/logo-S.png"/>
+    <source media="(max-width: 900px)" srcset="/images/logo-M.png"/>
+    <source media="(max-width: 675px)" srcset="/images/logo-L.png"/>
+    <img src="/images/logo-S.png" alt="palm trees logo">
+  </picture>
     <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
   <h2>Main Navigation</h2>
     <nav>
