--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <header>
   <h1>Wunderlust Travel</h1> 
   <picture>
-    <source media="(min-width: 1024px)" src="/images/logo-S.png"/>
-    <source media="(max-width: 780px)" src="/images/logo-M.png"/>
-    <source media="(max-width: 320px)" src="/images/logo-L.png"/>
+    <source media="(min-width: 1024w)" srcset="/images/logo-S.png"/>
+    <source media="(max-width: 780w)" srcset="/images/logo-M.png"/>
+    <source media="(max-width: 320w)" srcset="/images/logo-L.png"/>
     <img src="/images/logo-S.png" alt="palm trees logo">
   </picture>
     <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
