--- a/index.html
+++ b/index.html
@@ -86,34 +86,34 @@
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 </section>
 <section>
-  Testimonials
-  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-  Miranda Blake
-  miranda-blake.png
-  Traveling From: London, England
-  “I traveled here for business, but my stay was extended. Now it is my home.”
-  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-  Max Winter
-  max-winter.png
-  Traveling From: Berlin, Germany
-  “Great escape from my reality. Beautiful sunsets, wonderful people, great beer. ”
-  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-  Inés Villegoes
-  ines-villegoes.png
-  Traveling From: Barcelona, Spain
-  “A very safe environment for all travelers.”
+  <h2>Testimonials</h2>
+    - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+    <h3>Miranda Blake</h3>
+    miranda-blake.png
+    Traveling From: London, England
+    “I traveled here for business, but my stay was extended. Now it is my home.”
+    - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+    <h3>Max Winter</h3>
+    max-winter.png
+    Traveling From: Berlin, Germany
+    “Great escape from my reality. Beautiful sunsets, wonderful people, great beer. ”
+    - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+    <h3>Inés Villegoes</h3>
+    ines-villegoes.png
+    Traveling From: Barcelona, Spain
+    “A very safe environment for all travelers.”
 
-  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-  Carmen Lorenzo
-  carmen-lorenzo.png
-  Traveling From: Madrid, Spain
-  “Live, laugh, love-- everything you need in Majorca.”
-  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+    - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+    <h3>Carmen Lorenzo</h3>
+    carmen-lorenzo.png
+    Traveling From: Madrid, Spain
+    “Live, laugh, love-- everything you need in Majorca.”
+    - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 </section>
 <section>
-  About Your Destination
+  <h2>About Your Destination</h2>
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-  Size
+  <h3>Size</h3>
   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-ruler-2" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
     <path d="M17 3l4 4l-14 14l-4 -4z" />
@@ -125,7 +125,7 @@
 
   Size: 1,405 miles squared
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-  Elevation
+  <h3>Elevation</h3>
   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-top-bar" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
     <line x1="12" y1="21" x2="12" y2="3" />
@@ -135,7 +135,7 @@
 
   Elevation: 4,741 feet
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-  Location
+  <h3>Location</h3>
   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
     <circle cx="12" cy="11" r="3" />
@@ -143,7 +143,7 @@
   </svg>
   Location: Mediterranean 
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
-  Population
+  <h3>Population</h3>
   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
     <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
     <circle cx="9" cy="7" r="4" />
