--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 </section>
 
-Contact Us
+<h2>Contact Us</h2>
+
 First Name (Enter first name)
 Last Name (Enter last name)
 
