--- a/index.html
+++ b/index.html
@@ -157,17 +157,19 @@
 </section>
 
 <h2>Contact Us</h2>
-
-First Name (Enter first name)
-Last Name (Enter last name)
-
+<form>
+  <label for="first-name">First Name</label>
+  <input type="text" name="first-name">
+  <label for="last-name">Lasrt Name</label>
+  <input type="text" name="last-name">
+    <fieldset>
 Contact Method (Email, Text, Phone)
 Email Address (Enter Email)
 Phone Number (Enter telephone number)
-
+    </fieldset>
 Destination (Barcelona, Granada, Ibiza, Madrid, Majorca, Seville, Tenerife, Valencia)
 Travel Time (Fall, Winter, Spring, Summer, Flexible)
-
+</form>
 
 </body>
 <footer>
