--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <form>
   <label for="first-name">First Name</label>
   <input type="text" name="first-name">
-  <label for="last-name">Lasrt Name</label>
+  <label for="last-name">Last Name</label>
   <input type="text" name="last-name">
     <fieldset>
 Contact Method (Email, Text, Phone)
