--- a/index.html
+++ b/index.html
@@ -90,24 +90,24 @@
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
     <h3>Miranda Blake</h3>
     miranda-blake.png
-    Traveling From: London, England
-    “I traveled here for business, but my stay was extended. Now it is my home.”
+    <p>Traveling From: London, England</p>
+    <q>“I traveled here for business, but my stay was extended. Now it is my home.”</q>
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
     <h3>Max Winter</h3>
     max-winter.png
-    Traveling From: Berlin, Germany
-    “Great escape from my reality. Beautiful sunsets, wonderful people, great beer. ”
+    <p>Traveling From: Berlin, Germany</p>
+    <q>“Great escape from my reality. Beautiful sunsets, wonderful people, great beer. ”</q>
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
     <h3>Inés Villegoes</h3>
     ines-villegoes.png
     Traveling From: Barcelona, Spain
-    “A very safe environment for all travelers.”
+    <q>“A very safe environment for all travelers.”</q>
 
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
     <h3>Carmen Lorenzo</h3>
     carmen-lorenzo.png
     Traveling From: Madrid, Spain
-    “Live, laugh, love-- everything you need in Majorca.”
+    <q>“Live, laugh, love-- everything you need in Majorca.”</q>
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 </section>
 <section>
