--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
     <h3>Inés Villegoes</h3>
     ines-villegoes.png
-    Traveling From: Barcelona, Spain
+    <p>Traveling From: Barcelona, Spain</p>
     <q>“A very safe environment for all travelers.”</q>
 
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
     <h3>Carmen Lorenzo</h3>
     carmen-lorenzo.png
-    Traveling From: Madrid, Spain
-    <q>“Live, laugh, love-- everything you need in Majorca.”</q>
+    <p>Traveling From: Madrid, Spain</p>
+    <blockquote>“Live, laugh, love-- everything you need in Majorca.”</blockquote>
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 </section>
 <section>
