--- a/index.html
+++ b/index.html
@@ -91,17 +91,17 @@
     <h3>Miranda Blake</h3>
     miranda-blake.png
     <p>Traveling From: London, England</p>
-    <q>“I traveled here for business, but my stay was extended. Now it is my home.”</q>
+    <blockquote>“I traveled here for business, but my stay was extended. Now it is my home.”</blockquote>
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
     <h3>Max Winter</h3>
     max-winter.png
     <p>Traveling From: Berlin, Germany</p>
-    <q>“Great escape from my reality. Beautiful sunsets, wonderful people, great beer. ”</q>
+    <blockquote>“Great escape from my reality. Beautiful sunsets, wonderful people, great beer. ”</blockquote>
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
     <h3>Inés Villegoes</h3>
     ines-villegoes.png
     <p>Traveling From: Barcelona, Spain</p>
-    <q>“A very safe environment for all travelers.”</q>
+   <blockquote>“A very safe environment for all travelers.”</blockquote>
 
     - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
     <h3>Carmen Lorenzo</h3>
