--- a/index.html
+++ b/index.html
@@ -162,8 +162,10 @@
   <input type="text" name="first-name">
   <label for="last-name">Last Name</label>
   <input type="text" name="last-name">
+  <legend>Contact Method</legend>
     <fieldset>
-Contact Method (Email, Text, Phone)
+      <input type="radio" value="Email">
+      <label for="Email">Email</label>
 Email Address (Enter Email)
 Phone Number (Enter telephone number)
     </fieldset>
