--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <path d="M7 16l-1.5 -1.5" />
   </svg>
 
-  Size: 1,405 miles squared
+  <p>Size: 1,405 miles squared</p>
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
   <h3>Elevation</h3>
   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-top-bar" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -133,7 +133,7 @@
     <line x1="9" y1="21" x2="15" y2="21" />
   </svg>
 
-  Elevation: 4,741 feet
+  <p>Elevation: 4,741 feet</p>
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
   <h3>Location</h3>
   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -141,7 +141,7 @@
     <circle cx="12" cy="11" r="3" />
     <path d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z" />
   </svg>
-  Location: Mediterranean 
+  <p>Location: Mediterranean</p>
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
   <h3>Population</h3>
   <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-users" width="100" height="100" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -152,7 +152,7 @@
     <path d="M21 21v-2a4 4 0 0 0 -3 -3.85" />
   </svg>
 
-  Population: 923,608
+  <p>Population: 923,608</p>
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 </section>
 
@@ -166,6 +166,10 @@
     <fieldset>
       <input type="radio" value="Email">
       <label for="Email">Email</label>
+      <input type="radio" value="Text">
+      <label for="Text">Text</label>
+      <input type="radio" value="Phone">
+      <label for="Phone">Phone</label>
 Email Address (Enter Email)
 Phone Number (Enter telephone number)
     </fieldset>
