--- a/index.html
+++ b/index.html
@@ -170,8 +170,10 @@
       <label for="Text">Text</label>
       <input type="radio" value="Phone">
       <label for="Phone">Phone</label>
-Email Address (Enter Email)
-Phone Number (Enter telephone number)
+      <label for="my-email">Email Address</label>
+      <input type="text" name="my-email">
+      <label for="my-phone">Phone Number</label>
+      <input type="text" name="my-phone">
     </fieldset>
 Destination (Barcelona, Granada, Ibiza, Madrid, Majorca, Seville, Tenerife, Valencia)
 Travel Time (Fall, Winter, Spring, Summer, Flexible)
