--- a/index.html
+++ b/index.html
@@ -175,8 +175,26 @@
       <label for="my-phone">Phone Number</label>
       <input type="text" name="my-phone">
     </fieldset>
-Destination (Barcelona, Granada, Ibiza, Madrid, Majorca, Seville, Tenerife, Valencia)
-Travel Time (Fall, Winter, Spring, Summer, Flexible)
+    <label for="destination">Destination</label>
+    <select name="destination" placeholder="Choose your destination">
+      <option value="choose your destination">Barcelona</option>
+      <option value="choose your destination">Granada</option>
+      <option value="choose your destination">Ibiza</option>
+      <option value="choose your destination">Madrid</option>
+      <option value="choose your destination">Majorca</option>
+      <option value="choose your destination">Seville</option>
+      <option value="choose your destination">Tenerife</option>
+      <option value="choose your destination">Valencia</option>
+      </select>
+      <label for="Travel time">Travel Time</label>
+    <select name="Travel time" placeholder="Choose your travel time">
+      <option value="Travel time">Fall</option>
+      <option value="Travel time">Winter</option>
+      <option value="Travel time">Spring</option>
+      <option value="Travel time">Summer</option>
+      <option value="Travel time">Flexible</option>
+      </select>
+
 </form>
 
 </body>
