--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <label for="last-name">Last Name</label>
   <input type="text" name="last-name">
   <legend>Contact Method</legend>
-    <fieldset>
+    <fieldset id="contact">
       <input type="radio" value="Email">
       <label for="Email">Email</label>
       <input type="radio" value="Text">
@@ -175,6 +175,7 @@
       <label for="my-phone">Phone Number</label>
       <input type="text" name="my-phone">
     </fieldset>
+    <fieldset id="destination">
     <label for="destination">Destination</label>
     <select name="destination" placeholder="Choose your destination">
       <option value="choose your destination">Barcelona</option>
@@ -194,6 +195,7 @@
       <option value="Travel time">Summer</option>
       <option value="Travel time">Flexible</option>
       </select>
+    </fieldset>
 
 </form>
 
