--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <a class = "skip-to-content" href="#body">Skip to content</a>
     <title>Wunderlust Travel</title>
 </head>
 <header>
@@ -201,7 +202,7 @@
 
 </body>
 <footer>
-Copyright 2021 Wunderlust
-Privacy Statement
-Terms of Service
+<small><p>&copy; 2021 Wunderlust</p></small>
+<p><small>Privacy Statement</small></p>
+<p><small>Terms of Service</small></p>
 </footer>
