--- a/index.html
+++ b/index.html
@@ -202,6 +202,6 @@
 </body>
 <footer>
 <small><p>&copy; 2021 Wunderlust</p></small>
-<p><small>Privacy Statement</small></p>
-<p><small>Terms of Service</small></p>
+<p><small><a href="#">Privacy Statement</a></small></p>
+<p><small><a href="#">Terms of Service</a></small></p>
 </footer>
