--- a/index.html
+++ b/index.html
@@ -176,25 +176,25 @@
           <label for="my-phone">Phone Number</label>
           <input type="text" name="my-phone">
         </fieldset>
-        <fieldset id="destination">
+        <fieldset id="destinationinfo">
         <label for="destination">Destination</label>
-        <select name="destination" placeholder="Choose your destination">
-          <option value="choose your destination">Barcelona</option>
-          <option value="choose your destination">Granada</option>
-          <option value="choose your destination">Ibiza</option>
-          <option value="choose your destination">Madrid</option>
-          <option value="choose your destination">Majorca</option>
-          <option value="choose your destination">Seville</option>
-          <option value="choose your destination">Tenerife</option>
-          <option value="choose your destination">Valencia</option>
+        <select name="destination" id="destination" placeholder="Choose your destination">
+          <option value="Barcelona">Barcelona</option>
+          <option value="Granada">Granada</option>
+          <option value="Ibiza">Ibiza</option>
+          <option value="Madrid">Madrid</option>
+          <option value="Majorca">Majorca</option>
+          <option value="Seville">Seville</option>
+          <option value="Tenerife">Tenerife</option>
+          <option value="Valencia">Valencia</option>
           </select>
           <label for="Travel time">Travel Time</label>
-        <select name="Travel time" placeholder="Choose your travel time">
-          <option value="Travel time">Fall</option>
-          <option value="Travel time">Winter</option>
-          <option value="Travel time">Spring</option>
-          <option value="Travel time">Summer</option>
-          <option value="Travel time">Flexible</option>
+        <select name="Travel time" id="Travel time" placeholder="Choose your travel time">
+          <option value="Fall">Fall</option>
+          <option value="winter">Winter</option>
+          <option value="Spring">Spring</option>
+          <option value="Summer">Summer</option>
+          <option value="Flexible">Flexible</option>
           </select>
         </fieldset>
     </form>
