--- a/index.html
+++ b/index.html
@@ -177,25 +177,26 @@
           <input type="text" name="my-phone">
         </fieldset>
         <fieldset id="destinationinfo">
-        <label for="destination">Destination</label>
-        <select name="destination" id="destination" placeholder="Choose your destination">
-          <option value="Barcelona">Barcelona</option>
-          <option value="Granada">Granada</option>
-          <option value="Ibiza">Ibiza</option>
-          <option value="Madrid">Madrid</option>
-          <option value="Majorca">Majorca</option>
-          <option value="Seville">Seville</option>
-          <option value="Tenerife">Tenerife</option>
-          <option value="Valencia">Valencia</option>
-          </select>
-          <label for="Travel time">Travel Time</label>
-        <select name="Travel time" id="Travel time" placeholder="Choose your travel time">
-          <option value="Fall">Fall</option>
-          <option value="winter">Winter</option>
-          <option value="Spring">Spring</option>
-          <option value="Summer">Summer</option>
-          <option value="Flexible">Flexible</option>
-          </select>
+          <legend>Destination Information</legend>
+          <label for="destination">Destination</label>
+          <select name="destination" id="destination" placeholder="Choose your destination">
+            <option value="Barcelona">Barcelona</option>
+            <option value="Granada">Granada</option>
+            <option value="Ibiza">Ibiza</option>
+            <option value="Madrid">Madrid</option>
+            <option value="Majorca">Majorca</option>
+            <option value="Seville">Seville</option>
+            <option value="Tenerife">Tenerife</option>
+            <option value="Valencia">Valencia</option>
+            </select>
+            <label for="Travel time">Travel Time</label>
+          <select name="Travel time" id="Travel time" placeholder="Choose your travel time">
+            <option value="Fall">Fall</option>
+            <option value="winter">Winter</option>
+            <option value="Spring">Spring</option>
+            <option value="Summer">Summer</option>
+            <option value="Flexible">Flexible</option>
+            </select>
         </fieldset>
     </form>
 </section>
