--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <header>
   <h1>Wunderlust Travel</h1>
   <picture>
-    <source media="(min-width: 1024w)" src="Images\logo-L.png"/>
-    <source media="(max-width: 780w)" src="Images\logo-M.png"/>
-    <source media="(max-width: 320w)" src="Images\logo-S.png"/>
+    <source media="(min-width: 1024w)" srcset="Images\logo-L.png"/>
+    <source media="(max-width: 780w)" srcset="Images\logo-M.png"/>
+    <source media="(max-width: 320w)" srcset="Images\logo-S.png"/>
     <img src="Images\logo-S.png" alt="wunderlust logo"/>
   </picture>
     <p>Let Wunderlust Travel help you plan the trip of your dreams!</p>
