--- a/index.html
+++ b/index.html
@@ -30,7 +30,24 @@
   <section>
   <h2>Majorca</h2>
   <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
-
+  <picture>
+    <source media="(min-width: 1024w)" srcset="Images\majorca-waves-L.png"/>
+    <source media="(max-width: 780w)" srcset="Images\majorca-waves-M.png"/>
+    <source media="(max-width: 320w)" srcset="Images\majorca-waves-S.png"/>
+    <img src="Images\majorca-waves-S.png" alt="majorca waves"/>
+  </picture>
+  <picture>
+    <source media="(min-width: 1024w)" srcset="Images\majorca-beach-L.png"/>
+    <source media="(max-width: 780w)" srcset="Images\majorca-beach-M.png"/>
+    <source media="(max-width: 320w)" srcset="Images\majorca-beach-S.png"/>
+    <img src="Images\majorca-beach-S.png" alt="majorca waves"/>
+  </picture>
+  <picture>
+    <source media="(min-width: 1024w)" srcset="Images\majorca-cove-L.png"/>
+    <source media="(max-width: 780w)" srcset="Images\majorca-cove-M.png"/>
+    <source media="(max-width: 320w)" srcset="Images\majorca-cove-S.png"/>
+    <img src="Images\majorca-cove-S.png" alt="majorca waves"/>
+  </picture>
   majorca-waves.png
   majorca-beach.png
   majorca-cove.png
