--- a/index.html
+++ b/index.html
@@ -198,10 +198,13 @@
   <section id="contact">
     <h2>Contact Us</h2>
       <form>
-        <label for="first-name">First Name</label>
-        <input type="text" name="first-name" autocomplete="first-name">
-        <label for="last-name">Last Name</label>
-        <input type="text" name="last-name" autocomplete="surname">
+        <fieldset id="personalinfo">
+          <legend>Personal Information</legend>
+          <label for="first-name">First Name</label>
+          <input type="text" name="first-name" autocomplete="first-name">
+          <label for="last-name">Last Name</label>
+          <input type="text" name="last-name" autocomplete="surname">
+      </fieldset>
           <fieldset id="contact">
             <legend>Contact Method</legend>
             <input type="radio" value="Email" id="email">
