--- a/majorca.html
+++ b/majorca.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-<!--         Add all required tags in the head here - meta tags for SEO, responsiveness, and with info about the page, etc., in addition to tags to create a card on Twitter with a large image and open graph tags to allow for sharing on other social media sites -->
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <meta name="author" content="Ashley Flores">
+        <meta name="description" content="Wunderlust Travel site to help potential travelers find the destination of their dreams">
+        <meta name="robots" content="index,follow">
+        <meta name="keywords" content="travel, vacation, destination, events, ">
+        <meta name="twitter:card" content="summary"/>
+        <meta name="twitter:site" content="@Wunderlusttravel"/>
+        <meta name="twitter:title" content="Wunderlust Travel"/>
+        <meta name="twitter:description" content="Wunderlust Travel site to help potential travelers find the destination of their dreams"/>
+        <meta name="twitter:image" content="https://aflor162.github.io/wunderlust/Images/logo-S.png" />
+        <meta property="og:title" content="Wunderlust Travel"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:url" content="https://aflor162.github.io/wunderlust/"/>
+        <meta property="og:image" content="https://aflor162.github.io/wunderlust/Images/logo-S.png"/>
+        <link rel="icon" href="#">
+        <link rel="canonical" href="https://aflor162.github.io/wunderlust/">
+        <base href="#">
+        <link rel="alternate" href="#">
+        <link rel="author" href="Ashley Flores">
+        <link rel="license" href="#">
+        <link href="#" rel="stylesheet">
+        <a class = "skip-to-content" href="#body">Skip to content</a>
     </head>
     <body>
 <!--         Reveiew the document and add the proper tags to all of the headings  throughout. Use the outline feature in the validator to ensure that these have been added correctly. See the image of the correct outline as a reference if you have questions 
@@ -14,10 +37,10 @@ Also review the alt text on all of the images to ensure that it is descriptive a
             <nav>
                 <h2>Main Navigation</h2>
                 <ul>
-                    <li><a href="#">Destinations</a></li>
-                    <li><a href="#">Inspirations</a></li>
-                    <li><a href="#">Special</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#destinations">Destinations</a></li>
+                    <li><a href="#inspirations">Inspirations</a></li>
+                    <li><a href="#special">Special</a></li>
+                    <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </nav>
         </header>
@@ -26,10 +49,10 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                 <h2>Majorca</h2>
                 <p>Imagine an island with turquoise blue waters, secret coves, soft golden sands, lush green foliage, rugged mountains, picturesque villages and a vibrant capital city. The island and its capital, Palma, are overflowing with character, while its beaches are famous all around the world, making it one of the most sought-after summer destinations.</p>
                 <img src="images/majorca-waves.png" alt="Turquoise blue waters with white wave caps crashing against a rock cliff">
-                <img src="images/majorca-beach.png" alt="beach">
+                <img src="images/majorca-beach.png" alt="small beach leading out into calm turquoise blue waters surrounded by cliffs">
                 <img src="images/majorca-cove.png" alt="Deep blue water leading to the horizon with the island and trees in the foreground">
                 <section>
-                    <h3>Plan Your Trip</h3>
+                    <h3 id="destinations">Plan Your Trip</h3>
                     <section>
                         <h4>How to Get There</h4>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-plane" width="225" height="225" viewBox="0 0 24 24" stroke-width="1" stroke="#00bfd8" fill="none" stroke-linecap="round" stroke-linejoin="round"> <path stroke="none" d="M0 0h24v24H0z" fill="none"/> <path d="M16 10h4a2 2 0 0 1 0 4h-4l-4 7h-3l2 -7h-4l-2 2h-3l2 -4l-2 -4h3l2 2h4l-2 -7h3z" /></svg>
@@ -60,7 +83,7 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                     </section>   
                 </section>
                 <section>
-                    <h3>Testimonials</h3>
+                    <h3 id="inspirations">Testimonials</h3>
                     <section>
                         <img src="images/mirando-blake.png" alt="Miranda Blake has a blonde bob and is wearing dark sunglasses">
                         <h4>Amanda Blake</h4>
@@ -68,13 +91,13 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                         <q>I traveled here for business, but my stay was extended. Now it is my home.</q>
                     </section>
                     <section>
-                        <img src="images/max-winter.png" alt="Max Winter">
+                        <img src="images/max-winter.png" alt="Max Winter has short blonde hair with a small beard">
                         <h4>Max Winter</h4>
                         <p>Traveling From: Berlin, Germany</p>
                         <q>Great escape from my reality. Beautiful sunsets, wonderful people, great beer.</q>
                     </section>
                     <section>
-                        <img src="images/ines-villegoes.png" alt="lady person">
+                        <img src="images/ines-villegoes.png" alt="Inés Villegos has long, curly brown hair and is wearing a blue and brown long sleeved shirt">
                         <h4>Inés Villegos</h4>
                         <p>Traveling From: Barcelona, Spain</p>
                         <q>A very safe environment for all travelers.</q>
@@ -87,7 +110,7 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                     </section>
                 </section>
                 <section>
-                    <h3>About Your Destination</h3>
+                    <h3 id="special">About Your Destination</h3>
                     <section>
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-ruler-2" width="225" height="225" viewBox="0 0 24 24" stroke-width="1" stroke="#a905b6" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M17 3l4 4l-14 14l-4 -4z" /><path d="M16 7l-1.5 -1.5" /><path d="M13 10l-1.5 -1.5" /><path d="M10 13l-1.5 -1.5" /><path d="M7 16l-1.5 -1.5" /></svg>
                         <h4>Size</h4>
@@ -110,7 +133,7 @@ Also review the alt text on all of the images to ensure that it is descriptive a
                     </section>
                 </section>
                 <section>
-                    <h3>Contact Us</h3>
+                    <h3 id="contact">Contact Us</h3>
                     <form method="post" action="https://wp.zybooks.com/form-viewer.php">
                         <label for="fName">First Name<span>*</span></label>
                         <input type="text" name="fName" id="fName" autocomplete="given-name" required>
